// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About Project test create project  1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 50%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                >
                  projectsOrgs.aboutProject
                </p>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                          stroke="#555770"
                        />
                        <path
                          d="M6.583 5.146l2.063-2.063"
                          opacity="0.3"
                          stroke="#606170"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color Button--withRightIcon"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="orgIdentifier"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="description-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                            stroke="#555770"
                          />
                          <path
                            d="M6.583 5.146l2.063-2.063"
                            opacity="0.3"
                            stroke="#606170"
                          />
                        </g>
                      </svg>
                    </span>
                  </label>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="tags-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                            stroke="#555770"
                          />
                          <path
                            d="M6.583 5.146l2.063-2.063"
                            opacity="0.3"
                            stroke="#606170"
                          />
                        </g>
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  saveAndContinue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main preview StyledProps--flex StyledProps--flex-align-center-center"
            style="width: 50%;"
          >
            <div
              class="Layout--vertical StyledProps--main StyledProps--padding-huge StyledProps--flex StyledProps--flex-align-center-center"
              style="width: 100%;"
            >
              <img
                class="img"
                src="test-file-stub"
              />
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-semi-bold"
                >
                  projectsOrgs.whyCreateProject
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-small"
                >
                  projectsOrgs.createProjectMessage
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`About Project test create project  2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 50%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                >
                  projectsOrgs.aboutProject
                </p>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          dummy_name
                        </span>
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                          stroke="#555770"
                        />
                        <path
                          d="M6.583 5.146l2.063-2.063"
                          opacity="0.3"
                          stroke="#606170"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="dummy name"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color Button--withRightIcon"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="orgIdentifier"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="margin-bottom: 0px;"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                  </label>
                  <div
                    class="bp3-form-group"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        maxlength="1024"
                        name="description"
                        placeholder="common.descriptionPlaceholder"
                      >
                         This is new description
                      </textarea>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="tags-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                            stroke="#555770"
                          />
                          <path
                            d="M6.583 5.146l2.063-2.063"
                            opacity="0.3"
                            stroke="#606170"
                          />
                        </g>
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  saveAndContinue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main preview StyledProps--flex StyledProps--flex-align-center-center"
            style="width: 50%;"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card projectCard previewProjectCard"
              data-testid="project-card-dummy_name"
            >
              <div
                class="StyledProps--font StyledProps--main projectInfo StyledProps--padding-xlarge"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="colorBar"
                    style="background-color: rgb(0, 99, 247);"
                  />
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1;"
                  >
                    dummy name
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--margin-top-xsmall StyledProps--color StyledProps--color-grey700"
                  >
                    idLabel
                  </p>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--padding-top-small"
                    style="--text-line-clamp: 2;"
                  >
                     This is new description
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                    />
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
                      >
                        adminLabel 
                      </p>
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <div
                          class="AvatarGroup--stack projectAvatarGroup"
                          style="--avatar-over-lap: -13px;"
                        >
                          <div
                            class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                          >
                            <span
                              class="bp3-popover-wrapper Avatar--avatarPopOver"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="Avatar--AvatarInner"
                                  style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                                  tabindex="0"
                                >
                                  +
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
                      >
                        collaboratorsLabel 
                      </p>
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <div
                          class="AvatarGroup--stack projectAvatarGroup"
                          style="--avatar-over-lap: -13px;"
                        >
                          <div
                            class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                          >
                            <span
                              class="bp3-popover-wrapper Avatar--avatarPopOver"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="Avatar--AvatarInner"
                                  style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                                  tabindex="0"
                                >
                                  +
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main started StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--padding-bottom-xlarge"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-xsmall"
                >
                  modules
                </p>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`About Project test edit project  1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 100%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                >
                  projectsOrgs.projectEdit
                </p>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          test
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="test modified"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color Button--withRightIcon"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="orgIdentifier"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="Org Name"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="margin-bottom: 0px;"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                  </label>
                  <div
                    class="bp3-form-group"
                    data-id="description-3"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        maxlength="1024"
                        name="description"
                        placeholder="common.descriptionPlaceholder"
                      >
                        refetch returns new data
                      </textarea>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="tags-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                            stroke="#555770"
                          />
                          <path
                            d="M6.583 5.146l2.063-2.063"
                            opacity="0.3"
                            stroke="#606170"
                          />
                        </g>
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`About Project test edit project  2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 100%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                >
                  projectsOrgs.projectEdit
                </p>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          test
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="dummy name_updated"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color Button--withRightIcon"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="orgIdentifier"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="Org Name"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="margin-bottom: 0px;"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                  </label>
                  <div
                    class="bp3-form-group"
                    data-id="description-3"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        maxlength="1024"
                        name="description"
                        placeholder="common.descriptionPlaceholder"
                      >
                        refetch returns new data
                      </textarea>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="tags-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                            stroke="#555770"
                          />
                          <path
                            d="M6.583 5.146l2.063-2.063"
                            opacity="0.3"
                            stroke="#606170"
                          />
                        </g>
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
